chore: uptake base 0.26.0 codemodel 0.22.0 spawn 0.2.0 serve 0.4.1 (#65)